[package]
name = "craftrs"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
auth = ["dep:craftrs-auth"]
level = ["dep:craftrs-level"]
net = ["dep:craftrs-net"]

[dependencies]
craftrs-auth = { path = "auth", version = "0.0.0-beta.0", optional = true}
craftrs-level = { path = "level", version = "0.0.0-beta.0", optional = true }
craftrs-net = { path = "net", version = "0.0.0-beta.0", optional = true }

[workspace]
members = [
    "net",
    "level",
    "auth"
]
