[package]
name = "craftrs"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
auth = ["dep:craftrs-auth"]
level = ["dep:craftrs-level"]
net = ["dep:craftrs-net"]

[dependencies]
craftrs-auth = { path = "auth", version = "0.0.0-beta.0", optional = true}
craftrs-level = { path = "level", version = "0.0.0-beta.0", optional = true }
craftrs-net = { path = "net", version = "0.0.0-beta.0", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.23"
miners = { git = "https://github.com/mine-rs/mine-rs" }

[workspace]
members = [
    "net",
    "level",
    "auth"
]
