[package]
name = "craftrs"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
auth = ["dep:craftrs-auth"]
level = ["dep:craftrs-level"]
net = ["dep:craftrs-net"]

[dependencies]
craftrs-auth = { path = "auth", version = "0.0.0-beta.0", optional = true}
craftrs-level = { path = "level", version = "0.0.0-beta.0", optional = true }
craftrs-net = { path = "net", version = "0.0.0-beta.0", optional = true }

[dev-dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.23"
craftrs-level = { path = "level" }
futures-lite = "1.13.0"
isahc = { version = "1.7.2", features = ["json"] }
miners = { git = "https://github.com/mine-rs/mine-rs" }
num-bigint = "0.4.3"
rand = "0.8.5"
rsa = "0.9.2"
serde_json = "1.0.96"
sha1 = "0.10.5"
uuid = "1.3.3"

[workspace]
members = [
    "net",
    "level",
    "auth"
]
