[package]
name = "craftrs-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["net"]}
miners = { version = "0.0.0-beta.0", git = "https://github.com/mine-rs/mine-rs", ref = "8996df833fd5d12f74f995261fa676eec31338be"}
tokio-util = { version = "0.7.4", features = ["compat"] }
futures-lite = { version = "1.12.0" }
crypto-common = {version = "0.1.6"}
anyhow = "*"